--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ box-shadow: 0 0 0 0 rgba(204,169,44, 0);
 				<div class="elementor-element elementor-element-2c52f7d elementor-align-center elementor-tablet-align-center elementor-widget elementor-widget-button" data-id="2c52f7d" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:0.90000000000000002220446049250313080847263336181640625,&quot;to&quot;:1.100000000000000088817841970012523233890533447265625}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.1999999999999999555910790149937383830547332763671875}},&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1000,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=pla4w6lg&ck=chejnlrv&af=afie05mm49">
+					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=plalxgye&ck=chejnlrv&af=afie05mm49" target="_blank" rel="noopener noreferrer">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1131,7 +1131,7 @@ box-shadow: 0 0 0 0 rgba(204,169,44, 0);
 				<div class="elementor-element elementor-element-a338e63 elementor-align-center elementor-tablet-align-center elementor-widget elementor-widget-button" data-id="a338e63" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:0.90000000000000002220446049250313080847263336181640625,&quot;to&quot;:1.100000000000000088817841970012523233890533447265625}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.1999999999999999555910790149937383830547332763671875}},&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1000,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=plarp9xw&ck=chejnlrv&af=afie05mm49">
+					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=plarp9xw&ck=chejnlrv&af=afie05mm49" target="_blank" rel="noopener noreferrer">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1195,7 +1195,7 @@ box-shadow: 0 0 0 0 rgba(204,169,44, 0);
 				<div class="elementor-element elementor-element-17edaac elementor-align-center elementor-tablet-align-center elementor-widget elementor-widget-button" data-id="17edaac" data-element_type="widget" data-settings="{&quot;ha_floating_fx&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_toggle&quot;:&quot;yes&quot;,&quot;ha_floating_fx_scale_x&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:0.90000000000000002220446049250313080847263336181640625,&quot;to&quot;:1.100000000000000088817841970012523233890533447265625}},&quot;ha_floating_fx_scale_y&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;from&quot;:1,&quot;to&quot;:1.1999999999999999555910790149937383830547332763671875}},&quot;ha_floating_fx_scale_duration&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1000,&quot;sizes&quot;:[]},&quot;ha_floating_fx_scale_delay&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=plalxgye&ck=chejnlrv&af=afie05mm49">
+					<a class="elementor-button elementor-button-link elementor-size-md" href="https://ev.braip.com/ref?pl=pla4w6lg&ck=chejnlrv&af=afie05mm49" target="_blank" rel="noopener noreferrer">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
